# Exercises_from_books

./: CMakeLists.txt  README.md  main.cpp
HowToProgramC++/Chapter_2/: Printing.h  chapterTwo.h  numbers.h
ObjectOrientedProgrammingInc++/Chapter_2/: amount_dollars.h  arthimatic.h  favorityPoem.h  gallons.h  gallons.py  isLower.h  table.h
exercise/: exerciseOne.cpp  exerciseOne.h
