cmake_minimum_required(VERSION 3.28)
project(Exercises_from_books)

set(CMAKE_CXX_STANDARD 17)

add_executable(Exercises_from_books main.cpp
        exercise/exerciseOne.cpp
        exercise/exerciseOne.h
        ObjectOrientedProgrammingInc++/Chapter_2/gallons.h
        ObjectOrientedProgrammingInc++/Chapter_2/table.h
        ObjectOrientedProgrammingInc++/Chapter_2/table.h
        ObjectOrientedProgrammingInc++/Chapter_2/arthimatic.h
        ObjectOrientedProgrammingInc++/Chapter_2/favorityPoem.h
        ObjectOrientedProgrammingInc++/Chapter_2/isLower.h
        ObjectOrientedProgrammingInc++/Chapter_2/isLower.h
        ObjectOrientedProgrammingInc++/Chapter_2/amount_dollars.h
        HowToProgramC++/Chapter_2/numbers.h
)
